--- a/src/app/create-new-project/create-new-project.component.html
+++ b/src/app/create-new-project/create-new-project.component.html
@@ -77,7 +77,7 @@
 <label for="input-file-id" class="choose-file" ><mat-icon>attachment</mat-icon></label>
 </div>
   <div class="col-5">
-    <button mat-button type="submit" class="save-edit btn-info">Create</button>
+    <button mat-button [matDialogClose] type="submit" class="save-edit btn-info">Create</button>
   </div>
   
 </div>
