--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
     <section class="login container-fluid">
         <div class="login-google">
         </div> 
-        <div class="row">
+        <div class="row alllogin">
             <div class="form-container col-lg-6 col-md-6 col-12">
 <!-- ----------------------------- form Start ------------------------------ -->
                 <form class="login-container" [formGroup]="login" (ngSubmit)="onLogin(login)">
