--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,5 +1,7 @@
 <app-sidebar></app-sidebar>
-<section id="webContainer">
-<app-account-navbar></app-account-navbar>
-<router-outlet></router-outlet>
+<section id="overflow">
+    <section id="webContainer">
+        <app-account-navbar></app-account-navbar>
+        <router-outlet></router-outlet>
+    </section>
 </section>
