--- a/src/app/all-friends/all-friends.component.scss
+++ b/src/app/all-friends/all-friends.component.scss
@@ -22,3 +22,9 @@
     }
   }
 }
+@media only screen and (min-width: 320px) and (max-width: 767px)  {
+  .nav-tabs{
+    flex-wrap: nowrap;
+    font-size: 10px;
+  }
+}
