--- a/src/app/developer-content/developer-content.component.scss
+++ b/src/app/developer-content/developer-content.component.scss
@@ -146,3 +146,16 @@
   overflow-y: auto !important;
 
 }
+@media only screen and (min-width: 320px) and (max-width: 767px)  {
+  .developer-content{
+    &__status {
+      margin-bottom: 30px;
+      display: block;
+      flex-grow: 0;
+    flex-basis: 100%;
+      &-list {
+        min-height: 70vh;
+      }
+    }
+  }
+}
