--- a/src/app/find-friend/find-friend.component.scss
+++ b/src/app/find-friend/find-friend.component.scss
@@ -66,3 +66,8 @@
     }
   }
 }
+@media only screen and (min-width: 320px) and (max-width: 767px)  {
+  .request__content{
+    font-size: 10px;
+  }
+}
