--- a/src/app/friends/friends.component.scss
+++ b/src/app/friends/friends.component.scss
@@ -99,3 +99,9 @@
     }
   }
 }
+@media only screen and (min-width: 320px) and (max-width: 767px)  {
+  .friends__content{font-size: 10px;}
+  .friends__content-status p::before{
+    display: none;
+  }
+}
