--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -137,3 +137,11 @@
 .button-hide{
     cursor: pointer;
 }
+@media only screen and (min-width: 320px) and (max-width: 767px)  {
+    .alllogin{
+      margin: 0;
+    }
+    app-login-reg{
+        display: none;
+    }
+  }
