--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -18,3 +18,11 @@
         }
     }
 }
+// @media only screen and (min-width: 320px) and (max-width: 767px)  {
+//     .alllogin{
+//       margin: 0;
+//     }
+//     app-login-reg{
+//         display: none;
+//     }
+//   }
