--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,9 +5,9 @@
   <div class="container">
     <div class="row">
 <!-- ---------------------------- profile Info ----------------------------- -->
-      <section class="profile__info col-12 col-md-12 col-lg-6 ">
+      <section class="profile__info col-11 col-md-12 col-lg-6 ">
         <div class="row">
-          <div class="col-3 profile__info-img">
+          <div class="col-11 col-md-3 profile__info-img">
             <figure class="rounded-circle">
               <img class="img-full" *ngIf="!currentUser.image" src='../../assets/imgs/friends/friend.png' style="width: 100%; height: 100%;">
               <img id="imagePreview" *ngIf="currentUser.image" [src]="currentUser.image" style="width: 100%; height: 100%;" />
@@ -19,7 +19,7 @@
               </form>
             </figure>
           </div>
-          <div class="col-9 profile__info-details">
+          <div class="col-11 col-md-9 profile__info-details">
 <!-- ---------------------------- profile Edit ----------------------------- -->
             <button class="editData" #editDataBtn (click)="onEditClick($event,textArea ,bioParagraph,titleTextArea ,titleEdit,saveDataBtn)">Edit<mat-icon>edit</mat-icon></button>
             <div class="profile_info-details_personal">
@@ -27,8 +27,8 @@
               <p #titleEdit>{{currentUser.title}}</p>
               <textarea #titleTextArea class="profile_info-details_Bio-textarea">{{currentUser.title}}</textarea>
               <div class="row">
-                <a class ="col-6" href="mailto:mail1@example.com" target="_top">{{currentUser.email}}</a>
-                <div class="profile-info__details-rating col-6">
+                <a class ="col-12 col-md-6" href="mailto:mail1@example.com" target="_top">{{currentUser.email}}</a>
+                <div class="profile-info__details-rating col-12 col-md-6">
                   <ng-container *ngFor="let star of stars">
                     <app-star-rating *ngIf="currentUser.starts" [starId]="star" [rating]="currentUser.starts"></app-star-rating>
                     <app-star-rating *ngIf="!currentUser.starts" [starId]="star" [rating]="rating">
@@ -46,7 +46,7 @@
           </div>
         </div>
       </section>
-      <section class="profile__chart col-12 col-md-12 col-lg-5  ml-auto bg-white py-5">
+      <section class="profile__chart col-11 col-md-12 col-lg-5  ml-auto bg-white py-5">
             <div style="display: block">
               <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
                 [legend]="barChartLegend" [chartType]="barChartType" (chartHover)="chartHovered($event)"
@@ -55,7 +55,7 @@
         </section>
     </div>
     <section class="row comments-parent">
-      <div class="profile__comments col-12 " #created>
+      <div class="profile__comments col-11 col-md-12"#created>
         <div class="profile__comments-comment  col-12 pb-5 pt-5">
           <div class="row contentBox" *ngFor='let user of usersComments'>
             <div class="profile__comments-comment__user-img col-1">
