--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -28,6 +28,7 @@ h3{
         box-shadow: 0px 0px 2px 4px white;
         &-details{
         color: $blue;
+        position: unset;
         &__Bio-textarea{
             display: none;
             width: 100%;
@@ -52,6 +53,7 @@ h3{
         background-color: #ffffff;
         margin-top: 15rem;
         padding: 3rem;
+
         
     }
     &__comments{
@@ -90,6 +92,9 @@ h3{
     color: $gray;
     border: none;
     transition: all 0.2s ease-in-out;
+    position: absolute;
+    top: 0;
+    right: 0;
     mat-icon{
         margin: 0;
         margin-left: 5px;
@@ -206,7 +211,7 @@ figure{
     fill:   lightgray;
 }
 .col-12{
-    background-color: $white;
+    // background-color: $white;
 }
 .profile-info__details-rating{
     display: flex;
@@ -264,3 +269,38 @@ figure{
 .profile_info-details_Bio-textarea{
     display:none
 }
+@media only screen and (min-width: 320px) and (max-width: 767px)  {
+   .profile{
+     overflow-x: hidden;
+     &__comments{
+        margin:3rem auto 0;
+
+     }
+     &__info{
+        &:first-of-type{
+            margin: 4rem auto;
+
+        }
+     }
+     &__chart{
+        margin:0 auto;
+     }
+     &__info{
+         &-details{
+            padding: 0;
+            &_personal{
+                text-align: center;  
+            }
+         }
+     }
+    }
+    .profile_info-details_personal{
+        text-align: center;  
+    }
+    .rounded-circle{
+        margin: 0 auto;
+    }
+    }
+    .displayHidden{
+        display: none;
+    }
