--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
                 <span class=""> <span class="navbar-toggler-icon"></span>
                 </span>
             </button>
-
+ 
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="home-header__nav-list navbar-nav d-flex align-items-center mt-5 mr-4 ml-auto">
                     <li class="nav-item">
@@ -72,7 +72,7 @@
             <div class="home-work__container container">
                 <div class="home-work__container-row row">
                     <div class="home-work__container-row-video col-md-6">
-                        <video width="100%" poster="../../assets/imgs/home/video-8.png" controls>
+                        <video width="100%" poster="https://i.postimg.cc/44FPLpbb/video-8.png" controls>
                         </video>
                     </div>
                     <div class="home-work__container-row-content col-md-6">
@@ -110,7 +110,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="home-about-container-row-img">
-                            <img class="img-fluid" src="../../assets/imgs/home/about.png" alt="">
+                            <img class="img-fluid" src="https://i.postimg.cc/8CHBhvzv/about.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
 
     <section class="home-team  container-fluid">
         <div class="home-team_img">
-            <img src="../../assets/imgs/home/team1.png" alt="" class="img-fluid">
+            <img src="https://i.postimg.cc/vHVr0kmb/team1.png" alt="" class="team img-fluid">
         </div>
         <div class="container">
             <div class="home-team__header">
@@ -171,23 +171,23 @@
             <div class="home-team__gallery row">
                 <div class="home-team__gallery-item col-md-2" id="team">
                     <h3>Ali</h3>
-                    <img src="../../assets/imgs/home/ali.jpg" alt="" class="rounded-circle img-fluid">
+                    <img src="https://i.postimg.cc/SQ5L7kkg/ali.jpg" alt="" class="rounded-circle img-fluid">
                 </div>
                 <div class="home-team__gallery-item col-md-2">
                     <h3>Mai</h3>
-                    <img src="../../assets/imgs/home/mai.jpg" alt="" class="rounded-circle img-fluid">
+                    <img src="https://i.postimg.cc/8CtMFVZB/mai.jpg" alt="" class="rounded-circle img-fluid">
                 </div>
                 <div class="home-team__gallery-item col-md-2">
                     <h3>Mohamed</h3>
-                    <img src="../../assets/imgs/home/moahmed.jpg" alt="" class="rounded-circle img-fluid">
+                    <img src="https://i.postimg.cc/tgXFCgN4/moahmed.jpg" alt="" class="rounded-circle img-fluid">
                 </div>
                 <div class="home-team__gallery-item col-md-2">
                     <h3>Nada</h3>
-                    <img src="../../assets/imgs/home/nada.jpeg" alt="" class="rounded-circle img-fluid">
+                    <img src="https://i.postimg.cc/1tX6wYTx/nada.jpg" alt="" class="rounded-circle img-fluid">
                 </div>
                 <div class="home-team__gallery-item col-md-2">
                     <h3>Omnia</h3>
-                    <img src="../../assets/imgs/home/omnia.jpg" alt="" class="rounded-circle img-fluid">
+                    <img src="https://i.postimg.cc/7b82vPLD/omnia.jpg" alt="" class="rounded-circle img-fluid">
                 </div>
             </div>
         </div>
@@ -224,7 +224,7 @@
                 </div>
                 <div class=" col-lg-4  col-6 footer-arrow">
                    <figure>
-                       <img src="../../assets/imgs/home/arrow-footer.png" alt="">
+                       <img src="https://i.postimg.cc/gj5KxPkB/arrow-footer.png" alt="">
                    </figure>
                 </div>
 
