--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -16,7 +16,7 @@ p{
     color: $lightBlue;
 }
 .about-background-image{
-    background-image: url("../../assets/imgs/home/right-green.png"),url("../../assets/imgs/home/left-blue.png");
+    background-image: url("https://i.postimg.cc/Y9dRwFc7/right-green.png"),url("https://i.postimg.cc/4yrzJbBD/left-green.png");
     background-repeat: no-repeat, no-repeat;
     background-position: right, left;
     background-position-y: 30%, 90%;
@@ -27,7 +27,7 @@ p{
 .home{
     background-color: #ffffff;
     &-header{
-        background-image: url('../../assets/imgs/home/hero.png');
+        background-image: url('https://i.postimg.cc/XY6wmLZF/hero.png');
         background-position: top right;
         background-size: contain;
         background-repeat: no-repeat;
@@ -264,7 +264,7 @@ p{
     // --------------------Start Team-----------------
 
         &-team{
-            background-image: url("../../assets/imgs/home/left-green.png");
+            background-image: url("https://i.postimg.cc/4yrzJbBD/left-green.png");
             background-repeat: no-repeat;
             background-position-y: 245px;
             background-position-x: -85px;
@@ -272,6 +272,9 @@ p{
             padding-bottom: 10rem;
             &_img{
                 padding-bottom: 10rem;
+                img{
+                    width: 100%;
+                }
             }
             &__header{
                 padding: 3% 0%;
