--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,6 +1,6 @@
 @import '../ourVariables.scss';
 .login-body{
-    background-image: url('../../assets/imgs/login/loginBg.jpg');
+    background-image: url('https://i.postimg.cc/W4vVtXSs/loginBg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
