--- a/src/app/create-task/create-task.component.scss
+++ b/src/app/create-task/create-task.component.scss
@@ -31,4 +31,25 @@
     color: gray;
     background-color: white;
     float: right;
+  } 
+
+  @media only screen and (max-width:800px){
+    .example-form {
+      width: 100%;
   }
+  .mat-form-field {
+      width: 100%;
+  }
+  .example-full-width{
+     flex-wrap: wrap;
+    }
+    .save-edit{
+      left: 80%;
+  }
+}
+@media only screen and (max-width:425px){
+
+    .save-edit{
+      left: 55%;
+  }
+}
