--- a/src/app/edit-project/edit-project.component.scss
+++ b/src/app/edit-project/edit-project.component.scss
@@ -17,3 +17,23 @@
     position: relative;
     left: 90%;
   }
+  @media only screen and (max-width:800px){
+    .example-form {
+      width: 100%;
+  }
+  .mat-form-field {
+      width: 100%;
+  }
+  .example-full-width{
+     flex-wrap: wrap;
+    }
+    .save-edit{
+      left: 80%;
+  }
+}
+@media only screen and (max-width:425px){
+
+    .save-edit{
+      left: 55%;
+  }
+}
